tests/neg/misc/incr.ts

/*@ nincr :: (x:number) => {number|v = x + 1} */
function nincr(x:number):number{
  return x++;
}
